--- a/assets/sass/organisms/_header.scss
+++ b/assets/sass/organisms/_header.scss
@@ -66,6 +66,9 @@ div[id$="-layoutheaderblock"] {
 
   .logo-retraitespopulaires-offset {
     margin-left: -20px;
+    @media screen and (min-width: $screen-lg-min) {
+      margin-right: 60px;
+    }
   }
 
   [class*="theme-"] & {
@@ -77,11 +80,9 @@ div[id$="-layoutheaderblock"] {
   display: -webkit-box;
   list-style: none;
   padding-left: 0;
-  margin-bottom: 0;
+  margin-bottom: 2px;
 
   @media screen and (max-width: $screen-md-min) {
-    margin-bottom: 9.5px;
-
     &:not(.mobile) {
       display: none;
     }
@@ -154,6 +155,10 @@ div[id$="-layoutheaderblock"] {
   justify-content: flex-end;
   align-items: center;
   margin-left: auto;
+
+  @media screen and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+    text-align: right;
+  }
 
   .prenavbar-separator {
     width: 2px;
